[package]
name = "blocklistdownloadthing"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
ureq = "2.5.0"
eyre = "0.6.8"
url = { version = "2.3.1", features = ["serde"] }
once_cell = "1.17.0"
regex = "1.7.0"
atomicwrites = "0.3.1"
serde_json = "1.0.91"
log = "0.4.17"
env_logger = "0.10.0"
