[package]
name = "blocklistdownloadthing"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
serde = { version = "1.0.194", features = ["derive"] }
ureq = "2.9.1"
eyre = "0.6.11"
url = { version = "2.5.0", features = ["serde"] }
once_cell = "1.19.0"
regex = "1.10.2"
atomicwrites = "0.4.3"
serde_json = "1.0.110"
log = "0.4.20"
env_logger = "0.10.1"
